[package]
name = "parent_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.4"
warp = "0.3.1"
tokio-stream = "0.1.6"
futures = "0.3.15"
serde_derive = "1.0.147"
serde = "1.0.147"
parking_lot = "0.12.1"
web3 = "0.18.0"
hex = "0.4.3"
reqwest = "0.11.13"
rand = "0.8.5"